# databench

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  biome.json  docker-compose.yml  lefthook.yml  openapi.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  pyproject.toml  tsconfig.base.json  turbo.json  vitest.config.ts
.github/workflows/: ci.yml  contract.yml
analysis/: material_sft_eda.py  material_sft_report.md
apps/api/: package.json  tsconfig.json
apps/cli/: README.md  package.json
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
databench/: __init__.py  catalog.py  config.py  dataset.py  gen.py  hashing.py  io.py  llm.py  ops.py  provenance.py  recipe.py  schema.py  store.py  transform.py  vocabulary.py  workspace.py
databench/service/: __init__.py  app.py  deps.py  errors.py  meta.py  registry.py  schemas.py
docs/: HANDOFF.md  README.md  architecture.md  conventions.md  directory-layout.md  project-structure.md  tech-stack.md
docs/decisions/: 0001-rebuild-as-ts-monorepo.md  0002-http-framework.md  0003-storage-postgres-object-store.md  0004-toolchain-and-conventions.md  0005-infrastructure-and-deployment.md  0006-frontend-stack.md  0007-agent-cli.md
docs/feasibility/: 00-brief.md  01-eval-claude.md  02-eval-codex.md
examples/: load_demo.py  synth_demo.py
openapi/: openapi.json
prisma/: schema.prisma
scripts/: export_openapi.py  with-test-db-schema.mjs
tests/: test_core.py  test_gen.py  test_home.py  test_io.py  test_provenance.py  test_service.py  test_vocabulary.py
(+167 files in other folders)
