[project]
name = "databench"
version = "0.0.1"
description = "Infrastructure for managing LLM post-training data: versioned datasets, automatic lineage, and reproducible mixtures."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.5",
    "polars>=1.0",
    "pyarrow>=15",
    "blake3>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["databench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
